--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="guidePopup active">
             <input type="button" value="close">
             <strong class="merwk16">
-                matches fashion
+                matches fashio
                 <b class="merwr14">man</b>
             </strong>
             <p class="notowM16">
