가이드 팝업 수정

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <p class="notowM16">
                 총 292페이지 로 구성 되어있으며 모든 버튼 및 페이지의 상호작용이 완료되어있고
                 표준,접근,반응형,코드 최적화 구현이 완료되어 있습니다.
-                <span class="notowB20">input type:password invalid 기준 잘 봐야합니다(정답예시 : abc123!!)</span>
             </p>
             <a href="mailTo:parkjaehyuk99@gmail.com">parkjaehyuk99@gmail.com</a>
+            <a href="tel:01095299779">010-9529-9779</a>
         </div>
     </div>
     <header class="anotherHeader">
