--- a/sign.html
+++ b/sign.html
@@ -13,6 +13,20 @@
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
+    <div>
+        <div class="guidePopup active">
+            <input type="button" value="close">
+            <strong class="merwk16">
+                matches fashion
+                <b class="merwr14">man</b>
+            </strong>
+            <p class="notowB20">
+                input type:password invalid 기준 잘 봐야합니다(정답예시 : abc123!!)
+            </p>
+            <a href="mailTo:parkjaehyuk99@gmail.com">parkjaehyuk99@gmail.com</a>
+            <a href="tel:01095299779">010-9529-9779</a>
+        </div>
+    </div>
     <header class="anotherHeader">
         <div class="fixHead fll">
             <nav>
