--- a/acnt_wishlist.html
+++ b/acnt_wishlist.html
@@ -139,7 +139,7 @@
         </h2>
         <ul class="fllL odd">
             <li>
-                <input type="button" value="remove" title="remove button">
+                <input type="button" value="remove" title="remove button" class="remove">
                 <a href="detail_casual_13.html"><img src="images/list_casual/example_ca_13.png" alt="listproduct13"></a>
                 <dl>
                     <dt class="merwR16">Haven felted jacket</dt>
@@ -148,7 +148,7 @@
                 <input type="button" value="Add to cart" class="notowB16" title="add to cart butto">
             </li>
             <li>
-                <input type="button" value="remove" title="remove button">
+                <input type="button" value="remove" title="remove button" class="remove">
                 <a href="detail_snekers_07.html"><img src="images/list_snekers/example_sk_07.png" alt="listproduct7"></a>
                 <dl>
                     <dt class="merwR16">Blakey Original Sole canvas trainers</dt>
@@ -157,7 +157,7 @@
                 <input type="button" value="Add to cart" class="notowB16" title="add to cart button">
             </li>
             <li>
-                <input type="button" value="remove" title="remove button">
+                <input type="button" value="remove" title="remove button" class="remove">
                 <a href="detail_shoperbag_04.html"><img src="images/list_shoperbag/example_sp_04.png" alt="listproduct4"></a>
                 <dl>
                     <dt class="merwR16">Tribeca bi-colour faux leather tote</dt>
