--- a/cart.html
+++ b/cart.html
@@ -167,7 +167,7 @@
                     <option>5</option>
                 </select>
                 <strong class="notowSB18">$195</strong> 
-                <input type="button" value="remove" title="remove button">
+                <input type="button" value="remove" title="remove button" class="remove">
             </li>
             <li>
                 <figure>
@@ -192,7 +192,7 @@
                     <option>5</option>
                 </select>
                 <strong class="notowSB18">$194</strong>
-                <input type="button" value="remove" title="remove button">
+                <input type="button" value="remove" title="remove button" class="remove">
             </li>
         </ul>
         <div class="relatedContent">
