--- a/acnt_profile.html
+++ b/acnt_profile.html
@@ -176,7 +176,7 @@
                             </li>
                             <li class="styleOn">
                                 <label for="usrBirth" class="notowL12">Year/mon/day</label>
-                                <input type="text" id="usrBirth" value="1999/12/24" data-only="Number" pattern="^(\d{4})\/?(\d{2})(\d{0,2})$">
+                                <input type="text" id="usrBirth" value="1999/12/24" data-only="Number" pattern="^(\d{4})\/?(\d{2})\/?(\d{2})$">
                                 <mark class="notowL12">Please just enter numbers</mark>
                             </li>
                             <li class="styleOn">
